commit con desafio simulador

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="#">
-    <title>Desafio Uno JS</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Milano Vinos</title>
 </head>
 <body>
-    <h1>Desafio Uno JS Leandro Madrid</h1>
+    <h1>Milano Vinos</h1>
+
+    <img src="img/Milano.jpg" alt="">
 
 
 
